general idea for gallery

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,47 @@
 	padding: 0;
 	margin: 0;
 }
+
+body {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	font-family: sans-serif;
+}
+
+img {
+	width: 5vw;
+	height: 80vh;
+	object-fit: cover;
+	transition: .3s ease-in;
+	border-radius: 1rem;
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.text-content {
+	position: absolute;
+	bottom: 1rem;
+	left: 1rem;
+	transition: .5s ease-in;
+	opacity: 0;
+	white-space: nowrap;
+}
+
+body > span {
+	position: relative;
+	// overflow: hidden;
+}
+
+.cued-img {
+	width: 50vw;
+	transform: scaleY(1.1);
+}
+
+.cued-img + .text-content {
+	color: white;
+	opacity: 1;
+}
